--- a/LinearList/LinearList.vcxproj.filters
+++ b/LinearList/LinearList.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="SequenceListByArray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SingleLinkList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
